Organizar ejemplos de Java en dos carpetas: propuestos y autonomos